# hito-firmware-rust

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build_env.sh  make.sh  prj.conf
boards/: nrf52840dk_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp.overlay
rust-firmware/: .gitmodules  Cargo.toml  LICENSE  build.rs
rust-firmware/src/: BrightnessController.slint  HitoWindow.slint  LockScreen.slint  Router.slint  firmware_state.rs  helloworld.slint  hito_firmware.rs  lib.rs  lock_screen.slint  main.rs  main.slint  platform.rs
rust-firmware/src/crypto/: crypt0.rs  ffi.rs  mod.rs
rust-firmware/src/crypto/crc16_ccitt/: crc16_ccitt.c  crc16_ccitt.h
rust-firmware/src/crypto/libcrypt0/: .gitignore  README.md
rust-firmware/src/crypto/libcrypt0/include/: crypt0.h  crypt0_aes_ccm.h  crypt0_bip32.h  crypt0_bip39.h  crypt0_byteorder.h  crypt0_crc.h  crypt0_ed25519.h  crypt0_hmac.h  crypt0_hw_keys.h  crypt0_log.h  crypt0_pbkdf2.h  crypt0_ripemd160.h  crypt0_rlp.h  crypt0_rng.h  crypt0_secp256k1.h  crypt0_sha.h
rust-firmware/src/crypto/libcrypt0/lib/DumpHex/: DumpHex.c
rust-firmware/src/crypto/libcrypt0/lib/base58/: base58.c
rust-firmware/src/crypto/libcrypt0/lib/intc/: README.md  build_tests.bat  build_tests.sh  intc.h  intc_tests.c
rust-firmware/src/crypto/libcrypt0/lib/secp256k1/src/: ecmult.h  ecmult_const_impl.h  ecmult_gen.h  ecmult_impl.h  field.h  field_5x52_impl.h  group.h  group_impl.h  scalar.h  scratch.h
rust-firmware/src/crypto/libcrypt0/src/: crypt0.c  crypt0_aes_ccm.c  crypt0_bech32.c  crypt0_bip32.c  crypt0_bip39.c  crypt0_bip39_english.c  crypt0_crc.c  crypt0_ed25519.c  crypt0_hmac.c  crypt0_hw_keys.c  crypt0_key.c  crypt0_log.c  crypt0_pbkdf2.c  crypt0_ripemd160.c  crypt0_rlp.c  crypt0_rng.c  crypt0_secp256k1.c  crypt0_sha.c  intc_impl.c
rust-firmware/src/crypto/libcrypt0/tests-desktop/: .gitignore  CMakeLists.txt  SConstruct  main.scons
rust-firmware/src/crypto/libcrypt0/tests-desktop/src-tests/: bip44_test_data.c  crypt0.c  crypt0Config.cmake  libcrypt0_Targets.cmake  test_aes_ccm.cpp  test_extended_pubkey.cpp  test_key_hashing.cpp
rust-firmware/src/crypto/libcrypt0pro/: mod.rs
rust-firmware/src/crypto/libcrypt0pro/stellar/: address.rs  mod.rs  transaction.rs  transaction_parser.rs  transaction_serializer.rs
rust-firmware/src/drivers/: battery.rs  display.rs  indicator.rs  logging.rs  mod.rs  touch.rs
rust-firmware/src/drivers/minifb/: battery.rs  display.rs  indicator.rs  led_desktop.rs  logging.rs  mod.rs  simulator_window.rs  touch.rs
rust-firmware/src/drivers/zephyr/: battery.rs  display.rs  ffi.rs  indicator.rs  logging.rs  mod.rs  timer.rs  touch.rs
rust-firmware/src/drivers/zephyr/zephyr_drivers/: ft6336_ctp.c  ft6336_ctp.h  hito_battery.c  hito_battery.h  hito_pin_config.c  hito_pin_config.h  ili9342_lcd.c  ili9342_lcd.h  timer.c
rust-firmware/src/ui/: BaseButton.slint  Battery.slint  BrightnessController.slint  EnterPinController.slint  EnterPinScreen.slint  HitoWindow.slint  HomeScreen.slint  LockScreen.slint  PairWithTheAppScreen.slint  Palette.slint  ReceiveScreen.slint  Router.slint  SendScreen.slint  SendStellarScreen.slint  SettingsScreen.slint  Spacer.slint  TestScreen.slint  TestScreen2.slint  helloworld.slint  main.slint  mod.rs  screen_manager.rs
rust-firmware/src/vault/: ffi.rs  mod.rs  vault.c
rust-firmware/tests/: stellar_transaction_tests.rs  stellar_wallet_tests.rs
src/: hito_firmware.rs  main.c  main.rs
src/drivers/: display.rs  indicator.rs  mod.rs  touch.rs
src/drivers/minifb/: display.rs  indicator.rs  led_desktop.rs  mod.rs  simulator_window.rs  touch.rs
