[package]
name = "hito-firmware-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "hito-firmware-rust"
required-features = ["minifb"]

[dev-dependencies]
hex = "0.4"

[dependencies]
# Desktop simulation dependencies (optional)
image     = { version = "0.25.6", optional = true }
once_cell = { version = "1.19", optional = true }
minifb    = { version = "^0", optional = true }
egui      = { version = "^0", optional = true }
eframe    = { version = "^0", optional = true }
resvg     = { version = "^0.40", optional = true }
fontdb    = { version = "^0.7", optional = true }

# Dependencies for Stellar support with proper no_std features
ed25519-dalek = { version = "2", default-features = false, features = [] }
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
base32 = { version = "0.5.1", default-features = false }
crc = { version = "3.3.0", default-features = false }
stellar-xdr = { version = "23.0.0", default-features = false }

# Embedded dependencies (for zephyr feature)
cortex-m = { version = "0.7", optional = true }
cortex-m-rt = { version = "0.7", optional = true }
nrf5340-app-pac = { version = "0.12.2", optional = true }
panic-halt = { version = "0.2", optional = true }
# embedded-alloc = { version = "0.6", optional = true }
# critical-section = { version = "1.2", optional = true }
linked_list_allocator = { version = "0.10", optional = true }
slint = { default-features = false, optional = true, version = "1.13", features = ["compat-1-2", "libm", "renderer-software", "unsafe-single-threaded"] }
euclid = { version = "0.22", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build-dependencies]
cc = "1.0"
slint-build = "1.13"

[features]
default = ["minifb"]
minifb = ["dep:minifb", "dep:egui", "dep:eframe", "dep:resvg", "dep:fontdb", "dep:image", "dep:once_cell", "dep:slint", "slint/compat-1-2", "slint/renderer-software", "slint/backend-winit", "slint/std"]
zephyr = [
    "dep:cortex-m", 
    "dep:cortex-m-rt", 
    "dep:nrf5340-app-pac", 
    "dep:panic-halt",
    "dep:linked_list_allocator",
    "dep:slint",
    #"dep:mcu-board-support",
    "slint/compat-1-2",
    "slint/renderer-software", 
    "slint/unsafe-single-threaded",
    "slint/libm",
    "euclid/libm"
]

